--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,6 +25,9 @@
                 <span class="sr-only">(current)</span>
               </li>
             </ul>
+            <ul class="nav navbar-nav navbar-right">
+              <li><%= link_to "Sign up", new_user_registration_path %></li>
+            </ul>
           </div>
         </div>
       </nav>
