--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,6 +28,11 @@
             <ul class="nav navbar-nav navbar-right">
               <li><%= link_to "Sign up", new_user_registration_path %></li>
               <li><%= link_to "Sign in", new_user_session_path %></li>
+              <div class="navbar-right">
+                <p class="navbar-text">
+                  Signed in as <%= "#{current_user.email}" %>
+                </p>
+              </div>
             </ul>
           </div>
         </div>
