--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,11 +28,13 @@
             <ul class="nav navbar-nav navbar-right">
               <li><%= link_to "Sign up", new_user_registration_path %></li>
               <li><%= link_to "Sign in", new_user_session_path %></li>
-              <div class="navbar-right">
-                <p class="navbar-text">
-                  Signed in as <%= "#{current_user.email}" %>
-                </p>
-              </div>
+              <% if user_signed_in? %>
+                <div class="navbar-right">
+                  <p class="navbar-text">
+                    Signed in as <%= "#{current_user.email}" %>
+                  </p>
+                </div>
+              <% end %>
             </ul>
           </div>
         </div>
