--- a/app/views/exercises/new.html.erb
+++ b/app/views/exercises/new.html.erb
@@ -1,6 +1,6 @@
 <h1 class="text-center">New Exercise for <%= current_user.full_name %></h1>
 
-<% render 'form' %>
+<%= render 'form' %>
 
 <div class="row">
   <div class="col-md-12">
