Add Charts to Workouts

--- a/app/views/exercises/index.html.erb
+++ b/app/views/exercises/index.html.erb
@@ -1,7 +1,7 @@
 <div class="col-md-8 col-xs-12">
   <% unless @exercises.empty? %>
   <h1>Listing Exercises</h1>
-
+  
   <table class="table table-striped">
     <thead>
       <tr>
@@ -13,15 +13,15 @@
     </thead>
     <tbody>
       <% @exercises.each do |exercise| %>
-        <tr>
-          <td><%= exercise.duration_in_min %></td>
-          <td><%= truncate(exercise.workout, length: 100) %></td>
-          <td><%= exercise.workout_date %></td>
-          <td><%= link_to "Show", [current_user, exercise] %></td>
-          <td><%= link_to "Edit", [:edit, current_user, exercise] %></td>
-          <td><%= link_to "Destroy", [current_user, exercise], method: :delete, 
-                            data: { confirm: "Are you sure? "} %></td>
-        </tr>
+      <tr>
+        <td><%= exercise.duration_in_min %></td>
+        <td><%= truncate(exercise.workout, length: 100) %></td>
+        <td><%= exercise.workout_date %></td>
+        <td><%= link_to "Show", [current_user, exercise] %></td>
+        <td><%= link_to "Edit", [:edit, current_user, exercise] %></td>
+        <td><%= link_to "Destroy", [current_user, exercise], method: :delete, 
+                                    data: { confirm: "Are you sure?" } %></td>
+      </tr>
       <% end %>
     </tbody>
   </table>
@@ -33,4 +33,5 @@
   <br>
   <% end %>
   <%= link_to "New Workout", new_user_exercise_path(current_user), class: "btn btn-primary link" %>
+  <%= content_tag :div, "", id: "chart", data: {workouts: @exercises} %>
 </div>
