--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -17,6 +17,25 @@
             :html => { class: "form-horizontal", role: "form"},
             url: registration_path(resource_name)) do |f| %>
             <%= devise_error_messages! %>
+          
+          <div class="form-group">
+            <div class="control-label col-md-3">
+              <%= f.label :first_name %>
+            </div>
+            <div class="col-md-9">
+              <%= f.text_field :first_name, class: "form-control", autofocus: true %>
+            </div>
+          </div>
+
+          <div class="form-group">
+            <div class="control-label col-md-3">
+              <%= f.label :last_name %>
+            </div>
+            <div class="col-md-9">
+              <%= f.text_field :last_name, class: "form-control", autofocus: true %>
+            </div>
+          </div>
+
           <div class="form-group">
             <div class="control-label col-md-3">
               <%= f.label :email %>
@@ -25,6 +44,7 @@
               <%= f.email_field :email, class: "form-control", autofocus: true %>
             </div>
           </div>
+
           <div class="form-group">
             <div class="control-label col-md-3">
               <%= f.label :password %>
@@ -36,6 +56,7 @@
               <% end %><br />
             </div>
           </div>
+
           <div class="form-group">
             <div class="control-label col-md-3">
               <%= f.label :password_confirmation %>
@@ -44,6 +65,7 @@
               <%= f.password_field :password_confirmation, class: "form-control", autocomplete: "off" %>
             </div>
           </div>
+          
           <div class="form-group">
             <div class="col-md-offset-3 col-md-9">
               <%= f.submit "Sign up", class: "btn btn-primary btn-lg" %>
