--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,39 +1,87 @@
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
+<h2 class='text-center'>Edit <%= resource_name.to_s.humanize %></h2>
+      <div class="row">
+        <div class="col-md-12">
+            <%= form_for(resource, as: resource_name, 
+            :html => { class: "form-horizontal", role: "form"},
+            url: registration_path(resource_name)) do |f| %>
+            <%= devise_error_messages! %>
+          
+          <div class="form-group">
+            <div class="control-label col-md-3">
+              <%= f.label :first_name %>
+            </div>
+            <div class="col-md-9">
+              <%= f.text_field :first_name, class: "form-control", autofocus: true %>
+            </div>
+          </div>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
-  <%= devise_error_messages! %>
+          <div class="form-group">
+            <div class="control-label col-md-3">
+              <%= f.label :last_name %>
+            </div>
+            <div class="col-md-9">
+              <%= f.text_field :last_name, class: "form-control", autofocus: true %>
+            </div>
+          </div>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true %>
+          <div class="form-group">
+            <div class="control-label col-md-3">
+              <%= f.label :email %>
+            </div>
+            <div class="col-md-9">
+              <%= f.email_field :email, class: "form-control", autofocus: true %>
+            </div>
+          </div>
+
+           <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
+            <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
+          <% end %>
+
+          <div class="form-group">
+            <div class="control-label col-md-3">
+              <%= f.label :password %>
+            </div>
+            <div class="col-md-9">
+              <%= f.password_field :password, class: "form-control", autocomplete: "off" %>
+              <% if @minimum_password_length %>
+                <em>(<%= @minimum_password_length %> characters minimum)</em>
+              <% end %><br />
+            </div>
+          </div>
+
+          <div class="form-group">
+            <div class="control-label col-md-3">
+              <%= f.label :password_confirmation %>
+            </div>
+            <div class="col-md-9">
+              <%= f.password_field :password_confirmation, class: "form-control", autocomplete: "off" %>
+            </div>
+          </div>
+          <div class="form-group">
+            <div class="control-label col-md-3">
+              <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i>
+            </div>
+            <div class="col-md-9">
+              <%= f.password_field :current_password, class: "form-control", autocomplete: "off" %>
+            </div>
+          
+          <div class="form-group">
+            <div class="col-md-offset-3 col-md-9">
+              <%= f.submit "Update", class: "btn btn-primary btn-lg" %>
+            </div>
+          </div>
+            <% end %>
+          <div class="form-group">
+            <div class="col-md-offset-3 col-md-9">
+              <%= link_to "Back", :back %>
+            </div>
+          </div>
+        </div>
+      </div>
+
+<h3 class="text-left">Cancel my account</h3>
+<div class="row">
+  <div class="col-md-12"> 
+    <p class="text-left">Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete, class: "btn btn-danger btn-sm" %></p>
   </div>
-
-  <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-    <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
-  <% end %>
-
-  <div class="field">
-    <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
-    <%= f.password_field :password, autocomplete: "off" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
-    <%= f.password_field :current_password, autocomplete: "off" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Update" %>
-  </div>
-<% end %>
-
-<h3>Cancel my account</h3>
-
-<p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
-
-<%= link_to "Back", :back %>
+</div>
