--- a/app/views/exercises/index.html.erb
+++ b/app/views/exercises/index.html.erb
@@ -35,3 +35,12 @@
   <%= link_to "New Workout", new_user_exercise_path(current_user), class: "btn btn-primary link" %>
   <%= content_tag :div, "", id: "chart", data: {workouts: @exercises} %>
 </div>
+
+<div class="col-md-4 col-xs-12">
+  <h1 class="text-center">My Friends</h1>
+  <% @friends.each do |friend| %>
+    <div class="col-md-offset-3 col-md-6 friend_name">
+      <%= link_to friend.full_name, friendship_path(current_user.current_friendship(friend)) %>
+    </div>
+  <% end %>
+</div>
