--- a/app/views/exercises/index.html.erb
+++ b/app/views/exercises/index.html.erb
@@ -42,5 +42,10 @@
     <div class="col-md-offset-3 col-md-6 friend_name">
       <%= link_to friend.full_name, friendship_path(current_user.current_friendship(friend)) %>
     </div>
+    <div class="col-md-3">
+      <div class="btn-unfollow">
+        <%= link_to "Unfollow", friendship_path(current_user.current_friendship(friend)), method: :delete, data: {confirm: "Are you sure?"}, class: "btn btn-primary link" %>
+      </div>
+    </div>
   <% end %>
 </div>
